// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt regression heartbeat > captures heartbeat-manual-trigger 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="manual">Periodic check-in</heartbeat>",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario heartbeat-manual-trigger trigger=timer",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="manual">Periodic check-in</heartbeat>
</memory>

<situation>
Scenario heartbeat-manual-trigger trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "heartbeat-manual-trigger",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "aa25078720baad2d47dfbe3b09cd4e0f75ff1c9cedba0f76ea893743500dc885",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="manual">Periodic check-in</heartbeat>
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario heartbeat-manual-trigger trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;

exports[`prompt regression heartbeat > captures heartbeat-policy-and-timeline-link 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario heartbeat-policy-and-timeline-link trigger=timer",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>
</memory>

<situation>
Scenario heartbeat-policy-and-timeline-link trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "heartbeat-policy-and-timeline-link",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "aa25078720baad2d47dfbe3b09cd4e0f75ff1c9cedba0f76ea893743500dc885",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario heartbeat-policy-and-timeline-link trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;

exports[`prompt regression heartbeat > captures heartbeat-timed-global 1`] = `
{
  "fragments": [
    {
      "cacheable": true,
      "content": "You are Athena. Respond naturally and helpfully.",
      "id": "fixture.identity",
      "priority": 900,
      "section": "identity",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": true,
      "content": "## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.",
      "id": "fixture.policy",
      "priority": 800,
      "section": "policy",
      "source": "persona",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>",
      "id": "fixture.memory",
      "priority": 700,
      "section": "memory",
      "source": "memory",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>",
      "id": "skill.catalog",
      "priority": 510,
      "section": "situation",
      "source": "skill",
      "stability": "dynamic",
    },
    {
      "cacheable": true,
      "content": "## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.",
      "id": "tooling.protocol",
      "priority": 500,
      "section": "policy",
      "source": "tooling",
      "stability": "stable",
    },
    {
      "cacheable": false,
      "content": "<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>",
      "id": "tooling.available",
      "priority": 520,
      "section": "situation",
      "source": "tooling",
      "stability": "dynamic",
    },
    {
      "cacheable": false,
      "content": "Scenario heartbeat-timed-global trigger=timer",
      "id": "fixture.situation",
      "priority": 600,
      "section": "situation",
      "source": "scenario",
      "stability": "dynamic",
    },
  ],
  "fullPrompt": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>

<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>

<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>
</memory>

<situation>
Scenario heartbeat-timed-global trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
  "metadata": {
    "allowedTools": [],
    "generatedAt": "2026-03-15T10:00:00.000Z",
    "loadedSkills": [],
    "scenarioId": "heartbeat-timed-global",
    "sectionOrder": [
      "identity",
      "policy",
      "memory",
      "situation",
    ],
    "stableSignature": "aa25078720baad2d47dfbe3b09cd4e0f75ff1c9cedba0f76ea893743500dc885",
  },
  "sections": [
    {
      "cacheable": true,
      "content": "<identity>
You are Athena. Respond naturally and helpfully.
</identity>",
      "name": "identity",
    },
    {
      "cacheable": true,
      "content": "<policy>
## Control Flow and Wake-Up Mechanism

Unlike a human, your brain is not continuously thinking, but runs in short bursts. You are woken up by different types of events:

1. **User messages** — When a user sends a message directed at you or in a conversation you're part of
2. **Tool completions** — When you call \`request_heartbeat\` after a tool execution, allowing you to chain multiple tool calls before your thinking is suspended
3. **Timed heartbeats** — Periodic wake-ups to check in on conversations, even when no user has messaged you

When woken by a timed heartbeat, you can send a message if you have something meaningful to say, or stay silent if the conversation doesn't need your input right now.

The timeline will show a \`<heartbeat>\` event when you've been woken by a timed heartbeat, including the reason you were selected for wake-up. Check the timeline to understand why you were awakened.

## Tool Protocol

Tools retrieve information or compute results. Actions produce side effects.

Use tools only when they directly improve accuracy or actionability.
Prefer minimal, deterministic parameters and avoid speculative tool calls.

If no tool or action is needed, answer directly without calling tools.
</policy>",
      "name": "policy",
    },
    {
      "cacheable": false,
      "content": "<memory>
Recent memory:
- User 1: hello athena
- User 2: please help summarize this thread

Visible timeline event:
<heartbeat triggeredBy="global">Periodic check-in</heartbeat>
</memory>",
      "name": "memory",
    },
    {
      "cacheable": false,
      "content": "<situation>
Scenario heartbeat-timed-global trigger=timer

<tools>
Tools/actions available this round:
- send_message (action): Send a message to current channel
  Parameters: {"type":"object","properties":{"content":{"type":"string"}}}
</tools>

<skills>
Registered skills (use loadSkill to activate):
- mention-aware: Handle mention trigger nuances.
- search-service: Use search tools when needed.
- forward-present: Summarize and forward context.
</skills>
</situation>",
      "name": "situation",
    },
  ],
}
`;
